// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should change close icon when using close-icon prop 1`] = `
"<i class="mi-badge__wrapper mi-icon mi-icon-success mi-cascader__close-icon mi-haptics-feedback">
  <!---->
  <!---->
  <!---->
</i>"
`;

exports[`should render option slot correctly 1`] = `
"<li role="menuitemradio" class="mi-cascader__option" tabindex="-1" aria-checked="false">Custom Option foo
  <!---->
</li>"
`;

exports[`should render options-top、options-bottom slots correctly 1`] = `
<div class="mi-tab__panel">
  Top, tab index: 0
  <ul
    role="menu"
    class="mi-cascader__options"
  >
    <li
      role="menuitemradio"
      class="mi-cascader__option mi-cascader__option--selected"
      tabindex="0"
      aria-checked="true"
    >
      <span>
        Zhejiang
      </span>
      <i class="mi-badge__wrapper mi-icon mi-icon-success mi-cascader__selected-icon">
      </i>
    </li>
    <li
      role="menuitemradio"
      class="mi-cascader__option"
      tabindex="-1"
      aria-checked="false"
    >
      <span>
        Jiangsu
      </span>
    </li>
  </ul>
  Bottom, tab index: 0
</div>
`;

exports[`should render title slot correctly 1`] = `"<h2 class="mi-cascader__title">Custom Title</h2>"`;

exports[`should select correct option when value changed 1`] = `
<li
  role="menuitemradio"
  class="mi-cascader__option mi-cascader__option--selected"
  tabindex="0"
  aria-checked="true"
>
  <span>
    Wenzhou
  </span>
  <i class="mi-badge__wrapper mi-icon mi-icon-success mi-cascader__selected-icon">
  </i>
</li>
`;

exports[`should update tabs when previous tab is clicked 1`] = `
<div class="mi-cascader">
  <div class="mi-cascader__header">
    <h2 class="mi-cascader__title">
    </h2>
    <i class="mi-badge__wrapper mi-icon mi-icon-cross mi-cascader__close-icon mi-haptics-feedback">
    </i>
  </div>
  <div class="mi-tabs mi-tabs--line mi-cascader__tabs">
    <div class="mi-tabs__wrap">
      <div
        role="tablist"
        class="mi-tabs__nav mi-tabs__nav--line mi-tabs__nav--shrink mi-tabs__nav--complete"
        aria-orientation="horizontal"
      >
        <div
          id="mi-tabs-0"
          role="tab"
          class="mi-tab mi-tab--line mi-tab--shrink mi-cascader__tab"
          tabindex="-1"
          aria-selected="false"
          aria-controls="mi-tab"
        >
          <span class="mi-tab__text">
            Jiangsu
          </span>
        </div>
        <div
          id="mi-tabs-1"
          role="tab"
          class="mi-tab mi-tab--line mi-tab--shrink mi-tab--active mi-cascader__tab mi-cascader__tab--unselected"
          tabindex="0"
          aria-selected="true"
          aria-controls="mi-tab"
        >
          <span class="mi-tab__text">
            Select
          </span>
        </div>
        <div
          class="mi-tabs__line"
          style="transform: translateX(50px) translateX(-50%); transition-duration: 0.3s;"
        >
        </div>
      </div>
    </div>
    <div class="mi-tabs__content mi-tabs__content--animated">
      <div class="mi-swipe mi-tabs__track">
        <div
          style="transition-duration: 0ms; transform: translateX(0px); width: 200px;"
          class="mi-swipe__track"
        >
          <div
            class="mi-swipe-item mi-tab__panel-wrapper"
            id="mi-tab"
            role="tabpanel"
            tabindex="-1"
            aria-hidden="true"
            aria-labelledby="mi-tabs-0"
            style="width: 100px;"
          >
            <div class="mi-tab__panel">
              <ul
                role="menu"
                class="mi-cascader__options"
              >
                <li
                  role="menuitemradio"
                  class="mi-cascader__option"
                  tabindex="-1"
                  aria-checked="false"
                >
                  <span>
                    Zhejiang
                  </span>
                </li>
                <li
                  role="menuitemradio"
                  class="mi-cascader__option mi-cascader__option--selected"
                  tabindex="0"
                  aria-checked="true"
                >
                  <span>
                    Jiangsu
                  </span>
                  <i class="mi-badge__wrapper mi-icon mi-icon-success mi-cascader__selected-icon">
                  </i>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="mi-swipe-item mi-tab__panel-wrapper"
            id="mi-tab"
            role="tabpanel"
            tabindex="0"
            aria-hidden="false"
            aria-labelledby="mi-tabs-1"
            style="width: 100px;"
          >
            <div class="mi-tab__panel">
              <ul
                role="menu"
                class="mi-cascader__options"
              >
                <li
                  role="menuitemradio"
                  class="mi-cascader__option"
                  tabindex="-1"
                  aria-checked="false"
                >
                  <span>
                    Nanjing
                  </span>
                </li>
                <li
                  role="menuitemradio"
                  class="mi-cascader__option"
                  tabindex="-1"
                  aria-checked="false"
                >
                  <span>
                    Wuxi
                  </span>
                </li>
                <li
                  role="menuitemradio"
                  class="mi-cascader__option"
                  tabindex="-1"
                  aria-checked="false"
                >
                  <span>
                    Xuzhou
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
